--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   
 
         <div class=" flex flex-col mr-2 w-3/12  ">
-            <button onclick="calcolater('/')" class="w-full hover:bg-slate-800 duration-1000 bg-black text-white font-bold text-center h-10 mt-1.5 " >+</button>
-            <button onclick="calcolater('=')" class="w-full hover:bg-slate-800 duration-1000 bg-black text-white font-bold text-center h-36 mt-14">=</button>
+            <button onclick="calcolater('/')" class="w-full hover:bg-slate-800 duration-1000 bg-black text-white font-bold text-center h-10 mt-1.5 " >/</button>
+            <button onclick="aswosar()" class="w-full hover:bg-slate-800 duration-1000 bg-black text-white font-bold text-center h-36 mt-14">=</button>
         </div>
 
 
@@ -98,6 +98,11 @@
     function calcolater(newvalu){
    document.getElementById('myresult').value +=newvalu;
     }
+   function aswosar(){
+   var a =  document.getElementById('myresult').value;
+   var b = eval(a);
+   document.getElementById('myresult').value = b;
+   } 
  </script>
 
 </body>
